--- a/galleria/src/main/resources/templates/autore/autoreForm.html
+++ b/galleria/src/main/resources/templates/autore/autoreForm.html
@@ -13,6 +13,8 @@
 	rel="stylesheet" media="screen" type="text/css" />
 <link href="../static/css/admin.css" th:href="@{/css/admin.css}"
 	rel="stylesheet" media="screen" type="text/css" />
+<link href="../static/css/stile-custom.css" th:href="@{/css/stile-custom.css}"
+	rel="stylesheet" media="screen" type="text/css"/>
 
 </head>
 
@@ -49,19 +51,7 @@
 				<div class="row">
 					<header>
 						<div class="col-md-7">
-							<nav class="navbar-default pull-left">
-								<div class="navbar-header">
-									<button type="button" class="navbar-toggle collapsed"
-										data-toggle="offcanvas" data-target="#side-menu"
-										aria-expanded="false">
-										<span class="sr-only">Toggle navigation</span> <span
-											class="icon-bar"></span> <span class="icon-bar"></span> <span
-											class="icon-bar"></span>
-									</button>
-								</div>
-							</nav>
-							<div class="search hidden-xs hidden-sm">Galleria D'Arte -
-								Inscerisci Autore</div>
+							<div class="titolo">Pagina Admin - Inserisci Autore</div>
 						</div>
 						<div class="col-md-5">
 							<div class="header-rightside">
