--- a/galleria/src/main/resources/static/css/popup.css
+++ b/galleria/src/main/resources/static/css/popup.css
@@ -1,14 +1,13 @@
-.modal.modal-wide .modal-dialog {
-  width: 90%;
-}
-.modal-wide .modal-body {
-  overflow-y: auto;
+.product_view .modal-dialog {
+	max-width: 800px;
+	width: 100%;
 }
 
-/* irrelevant styling */
-body { text-align: center; }
-body p { 
-  max-width: 400px; 
-  margin: 20px auto; 
+.pre-cost {
+	text-decoration: line-through;
+	color: #a5a5a5;
 }
-#tallModal .modal-body p { margin-bottom: 900px }
+
+.space-ten {
+	padding: 10px 0;
+}
