--- a/galleria/src/main/resources/templates/autore/datiAutore.html
+++ b/galleria/src/main/resources/templates/autore/datiAutore.html
@@ -15,6 +15,8 @@
 	rel="stylesheet" media="screen" type="text/css" />
 <link href="../static/css/table.css" th:href="@{/css/table.css}"
 	rel="stylesheet" media="screen" />
+	<link href="../static/css/stile-custom.css" th:href="@{/css/stile-custom.css}"
+	rel="stylesheet" media="screen" type="text/css"/>
 </head>
 
 <body class="home">
@@ -50,19 +52,7 @@
 				<div class="row">
 					<header>
 						<div class="col-md-7">
-							<nav class="navbar-default pull-left">
-								<div class="navbar-header">
-									<button type="button" class="navbar-toggle collapsed"
-										data-toggle="offcanvas" data-target="#side-menu"
-										aria-expanded="false">
-										<span class="sr-only">Toggle navigation</span> <span
-											class="icon-bar"></span> <span class="icon-bar"></span> <span
-											class="icon-bar"></span>
-									</button>
-								</div>
-							</nav>
-							<div class="search hidden-xs hidden-sm">Galleria D'Arte -
-								Pagina Admin</div>
+							<div class="titolo">Pagina Admin - Dati Autore</div>
 						</div>
 						<div class="col-md-5">
 							<div class="header-rightside">
