--- a/galleria/src/main/resources/templates/opera/operaForm.html
+++ b/galleria/src/main/resources/templates/opera/operaForm.html
@@ -68,71 +68,133 @@
 						</div>
 					</header>
 				</div>
-				<div class="row col-md-10 col-md-offset-2 user-dashboard">
-					<form action="#" th:action="@{/admin/opera/inserisci}" th:object="${opera}"
-						method="post">
-						<div>
-							<div>
-								<span th:text="#{label.nome}">Nome: </span> <span><input
-									type="text" th:field="*{nome}" /></span> <span
-									th:if="${#fields.hasErrors('nome')}"
-									th:text="#{label.mandatory}">Error</span>
+			
+			
+			
+			
+				<div class="container">
+					<form th:action="@{/admin/opera/inserisci}" th:object="${opera}"
+						method="post" class="form-horizontal" role="form">
+						<fieldset>
+							<legend>Opera</legend>
+							<div class="form-group">
+								<label class="col-sm-3 control-label"><span
+									th:text="#{label.nome}">Nome: </span></label>
+								<div class="col-sm-4">
+									<input type="text" class="form-control" th:field="*{nome}"
+										placeholder="Nome" /><span
+										th:if="${#fields.hasErrors('nome')}"
+										th:text="#{label.mandatory}">Error</span>
+								</div>
 							</div>
-							<div>
-								<span th:text="#{label.descrizione}">Descrizione: </span> <span><input
-									type="text" th:field="*{descrizione}" /></span> <span
-									th:if="${#fields.hasErrors('descrizione')}"
-									th:text="#{label.mandatory}">Error</span>
+							<div class="form-group">
+								<label class="col-sm-3 control-label"><span
+									th:text="#{label.descrizione}">Descrizione: </span></label>
+								<div class="col-sm-4">
+									<input type="text" class="form-control" th:field="*{descrizione}"
+										placeholder="Descrizione" /><span
+										th:if="${#fields.hasErrors('descrizione')}"
+										th:text="#{label.mandatory}">Error</span>
+								</div>
 							</div>
-							<div>
-								<span th:text="#{label.anno}">Anno: </span> <span><input
-									type="text" th:field="*{anno}" /></span> <span
-									th:if="${#fields.hasErrors('anno')}" th:text="#{label.number}">Error</span>
+							<div class="form-group">
+								<label class="col-sm-3 control-label"><span
+									th:text="#{label.anno}">Anno: </span></label>
+								<div class="col-sm-4">
+									<input type="text" class="form-control"
+										th:field="*{anno}" placeholder="Anno" /><span
+										th:if="${#fields.hasErrors('anno')}"
+										th:text="#{label.number}">Error</span>
+								</div>
 							</div>
-							<div>
-								<span th:text="#{label.lunghezza}">Lunghezza: </span> <span><input
-									type="text" th:field="*{lunghezza}" /></span> <span
-									th:if="${#fields.hasErrors('lunghezza')}" th:text="#{label.number}">Error</span>
+							<div class="form-group">
+								<label class="col-sm-3 control-label"><span
+									th:text="#{label.lunghezza}">Lunghezza: </span></label>
+								<div class="col-sm-4">
+									<input type="text" class="form-control"
+										th:field="*{lunghezza}" placeholder="lunghezza" /><span
+										th:if="${#fields.hasErrors('lunghezza')}"
+										th:text="#{label.number}">Error</span>
+								</div>
 							</div>
-							<div>
-								<span th:text="#{label.altezza}">Altezza: </span> <span><input
-									type="text" th:field="*{altezza}" /></span> <span
-									th:if="${#fields.hasErrors('altezza')}" th:text="#{label.number}">Error</span>
+							
+							<div class="form-group">
+								<label class="col-sm-3 control-label"><span
+									th:text="#{label.altezza}">Altezza: </span></label>
+								<div class="col-sm-4">
+									<input type="text" class="form-control"
+										th:field="*{altezza}" placeholder="altezza" /><span
+										th:if="${#fields.hasErrors('altezza')}"
+										th:text="#{label.number}">Error</span>
+								</div>
 							</div>
-							<div>
-								<span th:text="#{label.immagine}">Immagine: </span> 
-								<span><input type="text" th:field="*{imgURL}" /></span> <span
-									th:if="${#fields.hasErrors('imgURL')}" th:text="#{label.mandatory}">Error</span>
+							
+							<div class="form-group">
+								<label class="col-sm-3 control-label"><span
+									th:text="#{label.immagine}">Immagine: </span></label>
+								<div class="col-sm-4">
+									<input type="text" class="form-control" th:field="*{imgURL}"
+										placeholder="URL" /><span
+										th:if="${#fields.hasErrors('imgURL')}"
+										th:text="#{label.mandatory}">Error</span>
+								</div>
 							</div>
-							<div>
-								<span th:text="#{label.autore}">Autore: </span> 
-								<select th:field="*{autore}">
+							
+							<div class="form-group">
+								<label class="col-sm-3 control-label"><span
+									th:text="#{label.autore}">Autore: </span></label>
+								<div class="col-sm-4">
+									<select th:field="*{autore}">
 									<th:foreach th:each="autore: ${autori}">
 										<option th:value="${autore.id}" th:text="${autore.nome}"></option>
 									</th:foreach>
-								</select>
-							</div>	
-							<div>
-								<span th:text="#{label.stanze}">Stanze: </span> 
-								<select th:field="*{stanza}">
+									</select>
+								</div>
+							</div>
+							
+							<div class="form-group">
+								<label class="col-sm-3 control-label"><span
+									th:text="#{label.stanze}">Stanze: </span></label>
+								<div class="col-sm-4">
+									<select th:field="*{stanza}">
 									<th:foreach th:each="stanza: ${stanze}">
 										<option th:value="${stanza.id}" th:text="${stanza.nome}"></option>
 									</th:foreach>
-								</select>
-							</div>		
-							
-							<div>
-								<span><input class="btn btn-primary" type="submit" value="Invia"></input></span>
+									</select>
+								</div>
 							</div>
-						</div>
+							
+							
+							
+							
+							
+							
+							<div class="form-group">
+								<div class="col-sm-offset-4 col-sm-9">
+									<button type="submit" class="btn btn-success">Inserisci
+										Opera</button>
+								</div>
+							</div>
+						</fieldset>
 					</form>
 				</div>
+			
+			
+			
+			
+			
+			
+			
+				
+			
+			
+			
+			
+			
+			
 			</div>
 		</div>
 	</div>
-
-
-
 	<script th:inline="javascript">
 		$(document).ready(function() {
 			$('[data-toggle="offcanvas"]').click(function() {
