--- a/galleria/src/main/resources/templates/opera/datiOpera.html
+++ b/galleria/src/main/resources/templates/opera/datiOpera.html
@@ -18,7 +18,7 @@
 		</p>    
     </div>
 
-<form action="#" th:action="@{/opera}" method="get">
+<form action="#" th:action="@{/admin/opera/inserisci}" method="get">
 <button type="submit">Torna alla form</button>
 </form>
 
