--- a/galleria/src/main/resources/templates/admin/stanze.html
+++ b/galleria/src/main/resources/templates/admin/stanze.html
@@ -3,35 +3,163 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-<title>Welcome Security with Spring Boot!</title>
-<link href="../static/css/admin.css" th:href="@{/css/admin.css}"
-	rel="stylesheet" media="screen" type="text/css" />
+<title>Admin - Stanze</title>
+<link href="../static/vendor/bootstrap/css/bootstrap.min.css"
+	th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet"
+	media="screen" type="text/css" />
 <link href="../static/vendor/font-awesome/css/font-awesome.min.css"
 	th:href="@{/vendor/font-awesome/css/font-awesome.min.css}"
 	rel="stylesheet" media="screen" type="text/css" />
+<link href="../static/css/admin.css" th:href="@{/css/admin.css}"
+	rel="stylesheet" media="screen" type="text/css" />
+<link href="../static/css/table.css" th:href="@{/css/table.css}"
+	rel="stylesheet" media="screen" type="text/css" />
+<link href="../static/css/popup.css" th:href="@{/css/popup.css}"
+	rel="stylesheet" media="screen" type="text/css" />
+<link href="../static/css/stile-custom.css"
+	th:href="@{/css/stile-custom.css}" rel="stylesheet" media="screen"
+	type="text/css" />
+<script th:src="@{../vendor/jquery/jquery.min.js}"></script>
+<script th:src="@{../vendor/bootstrap/js/bootstrap.min.js}"></script>
 </head>
-<body>
-	<h1 style="color: blue">Hello! This is Admin Page!</h1>
 
-	<a style="color: blue" th:href="@{/}">Go to Home Page</a>
-	<br></br>
-	<a style="color: blue" th:href="@{/admin/registraAdmin}">Registra
-		Admin</a>
-	<br></br>
-	<a style="color: blue" th:href="@{/admin/autori}">Gestisci Autori</a>
-	<br></br>
-	<a style="color: blue" th:href="@{/admin/opere}">Gestisci Opere</a>
-	<br></br>
-	<a style="color: blue" th:href="@{/admin/stanze}">Gestisci Stanze</a>
-	<br></br>
-	
+<body class="home">
+	<div class="container-fluid display-table">
+		<div class="row display-table-row">
+			<div
+				class="col-md-2 col-sm-1 hidden-xs display-table-cell v-align box"
+				id="navigation">
+				<div class="logo">
+					<a href="/"> <img src="/img/profile.png" alt="logo"
+						class="hidden-xs hidden-sm"></img>
+					</a>
+				</div>
+				<div class="navi">
+					<ul>
+						<li><a href="/admin"><i class="fa fa-home"
+								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Home</span></a></li>
+						<li><a th:href="@{/admin/opere}"><i
+								class="fa fa-file-image-o" aria-hidden="true"></i><span
+								class="hidden-xs hidden-sm">Opere</span></a></li>
+						<li class="active"><a th:href="@{/admin/stanze}"><i class="fa fa-map-o"
+								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Stanze</span></a></li>
+						<li><a th:href="@{/admin/autori}"><i class="fa fa-user"
+								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Autori</span></a></li>
+						<li><a href="#"><i class="fa fa-plus-circle"
+								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Aggiungi
+									Admin</span></a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-md-10 display-table-cell v-align">
+				<div class="row">
+					<header>
+						<div class="col-md-7">
+							<div class="titolo">Pagina Admin - Gestisci Stanze</div>
+						</div>
+						<div class="col-md-5">
+							<div class="header-rightside">
+								<ul class="list-inline header-top pull-right">
+									<li><i class="fa fa-user" aria-hidden="true"></i></li>
+									<li>Username</li>
+									<li>Email</li>
+									<li>
+										<form th:action="@{/logout}" method="post">
+											<input class="btn btn-primary" type="submit" value="Log Out" />
+										</form>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</header>
+				</div>
+				<div class="row col-md-10 col-md-offset-2 user-dashboard">
+					<div style="text-align: center">
+						<form th:action="@{/admin/stanza/inserisci}" method="get">
+							<input type="submit" class="btn btn-primary"
+								value="Inserisci Nuova Stanza"></input>
+						</form>
+					</div>
+					<table class="table table-striped custab">
+						<tr>
+							<th>Nome</th>
+							<th>Descrizione</th>
+							<th>Lista Stanze</th>
+							<th class="text-center">Azione</th>
+						</tr>
+						<th:foreach th:each="stanza: ${stanze}">
+							<tr>
+								<td><span th:text="${stanza.nome}"></span></td>
+								<td><a th:href="'#desc'+${stanza.id}" data-toggle="modal">Descrizione</a></td>
+								<td><a th:href="'#opere'+${stanza.id}" data-toggle="modal">Opere</a></td>
 
+								<td class="text-center"><a class='btn btn-info btn-xs'
+									th:href="@{stanza/modifica?(id=${stanza.id})}"> <span
+										class="glyphicon glyphicon-edit"></span>Modifica
+								</a> <a th:href="@{stanza/elimina?(id=${stanza.id})}"
+									class="btn btn-danger btn-xs"> <span
+										class="glyphicon glyphicon-remove"></span> Elimina
+								</a></td>
+							</tr>
+							<!-- Modal -->
+							<div class="modal fade" th:id="'desc'+${stanza.id}" tabindex="-1" role="dialog"
+								aria-hidden="true">
+									<div class="vertical-alignment-helper">
+        							<div class="modal-dialog vertical-align-center">
+									<div class="modal-content">
+										<div class="modal-header">
+												<span th:text="${stanza.nome}"></span>
+										</div>
+										<div class="modal-body">
+										<span th:text="${stanza.descrizione}"></span><br></br>
+										</div>
+										<div class="modal-footer"><button id="btnSubmit" type="button" class="btn btn-default"
+								data-dismiss="modal">
+								<i class="fa fa-times"></i> Close
+							</button></div>
+									</div>
+								</div>
+							</div>
+						</div>
+							<!-- End Modal -->
+							<!-- Modal -->
+							<div class="modal fade" th:id="'opere'+${stanza.id}" tabindex="-1" role="dialog"
+								aria-hidden="true">
+									<div class="vertical-alignment-helper">
+        							<div class="modal-dialog vertical-align-center">
+									<div class="modal-content">
+										<div class="modal-header">
+											<span th:text="${stanza.nome}"></span>
+										</div>
+										<div class="modal-body">
+										<th:foreach th:each="opera: ${stanza.opere}">
+										<ul>
+										<li><span th:text="${opera.nome}"></span></li>
+										</ul>
+										</th:foreach>
+										</div>
+										<div class="modal-footer"><button id="btnSubmit" type="button" class="btn btn-default"
+								data-dismiss="modal">
+								<i class="fa fa-times"></i> Close
+							</button></div>
+									</div>
+								</div>
+							</div>
+						</div>
+							<!-- End Modal -->
+						</th:foreach>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
 
-	<br />
-
-	<form th:action="@{/logout}" method="post">
-		<input type="submit" value="Sign Out" />
-	</form>
-
+	<script th:inline="javascript">
+		$(document).ready(function() {
+			$('[data-toggle="offcanvas"]').click(function() {
+				$("#navigation").toggleClass("hidden-xs");
+			});
+		});
+	</script>
 </body>
 </html>
