--- a/galleria/src/main/resources/templates/autore/autoreForm.html
+++ b/galleria/src/main/resources/templates/autore/autoreForm.html
@@ -70,7 +70,7 @@
 					</header>
 				</div>
 				<div class="container">
-					<form th:action="@{/admin/autore/inserisci}" th:object="${autore}"
+					<form th:action="@{/admin/autore/inserisci(id=${autore.id})}" th:object="${autore}"
 						method="post" class="form-horizontal" role="form">
 						<fieldset>
 							<legend>Autore</legend>
