--- a/galleria/src/main/resources/templates/opera/operaForm.html
+++ b/galleria/src/main/resources/templates/opera/operaForm.html
@@ -68,12 +68,8 @@
 						</div>
 					</header>
 				</div>
-			
-			
-			
-			
 				<div class="container">
-					<form th:action="@{/admin/opera/inserisci}" th:object="${opera}"
+					<form th:action="@{/admin/opera/inserisci(id=${opera.id})}" th:object="${opera}"
 						method="post" class="form-horizontal" role="form">
 						<fieldset>
 							<legend>Opera</legend>
