--- a/galleria/src/main/resources/templates/stanza/stanzaForm.html
+++ b/galleria/src/main/resources/templates/stanza/stanzaForm.html
@@ -73,7 +73,7 @@
 			
 			
 				<div class="container">
-					<form th:action="@{/admin/stanza/inserisci}" th:object="${stanza}"
+					<form th:action="@{/admin/stanza/inserisci(id=${stanza.id})}" th:object="${stanza}"
 						method="post" class="form-horizontal" role="form">
 						<fieldset>
 							<legend>Stanza</legend>
