--- a/galleria/src/main/resources/templates/admin/opere.html
+++ b/galleria/src/main/resources/templates/admin/opere.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-<title>Admin - Autori</title>
+<title>Admin - Opere</title>
 <link href="../static/vendor/bootstrap/css/bootstrap.min.css"
 	th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet"
 	media="screen" type="text/css" />
@@ -13,8 +13,6 @@
 <link href="../static/css/admin.css" th:href="@{/css/admin.css}"
 	rel="stylesheet" media="screen" type="text/css" />
 <link href="../static/css/table.css" th:href="@{/css/table.css}"
-	rel="stylesheet" media="screen" type="text/css" />
-<link href="../static/css/popup.css" th:href="@{/css/popup.css}"
 	rel="stylesheet" media="screen" type="text/css" />
 <link href="../static/css/stile-custom.css"
 	th:href="@{/css/stile-custom.css}" rel="stylesheet" media="screen"
@@ -45,7 +43,7 @@
 								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Stanze</span></a></li>
 						<li><a th:href="@{/admin/autori}"><i class="fa fa-user"
 								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Autori</span></a></li>
-						<li><a href="#"><i class="fa fa-plus-circle"
+						<li><a href=""><i class="fa fa-plus-circle"
 								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Aggiungi
 									Admin</span></a></li>
 					</ul>
