--- a/galleria/src/main/resources/templates/autore/autoreForm.html
+++ b/galleria/src/main/resources/templates/autore/autoreForm.html
@@ -47,7 +47,6 @@
 				</div>
 			</div>
 			<div class="col-md-10 col-sm-11 display-table-cell v-align">
-				<!--<button type="button" class="slide-toggle">Slide Toggle</button> -->
 				<div class="row">
 					<header>
 						<div class="col-md-7">
@@ -69,7 +68,7 @@
 						</div>
 					</header>
 				</div>
-				<div class="container">
+					<div class="row col-md-10 col-md-offset-2 user-dashboard">
 					<form th:action="@{/admin/autore/inserisci(id=${autore.id})}" th:object="${autore}"
 						method="post" class="form-horizontal" role="form">
 						<fieldset>
@@ -132,12 +131,10 @@
 							</div>
 						</fieldset>
 					</form>
+					</div>
 				</div>
 			</div>
 		</div>
-
-	</div>
-
 
 
 	<!-- Modal -->
