--- a/galleria/src/main/resources/templates/admin/admins.html
+++ b/galleria/src/main/resources/templates/admin/admins.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-<title>Admin</title>
+<title>Admin - Autori</title>
 <link href="../static/vendor/bootstrap/css/bootstrap.min.css"
 	th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet"
 	media="screen" type="text/css" />
@@ -12,9 +12,10 @@
 	rel="stylesheet" media="screen" type="text/css" />
 <link href="../static/css/admin.css" th:href="@{/css/admin.css}"
 	rel="stylesheet" media="screen" type="text/css" />
-<link href="../static/css/stile-custom.css" th:href="@{/css/stile-custom.css}"
+<link href="../static/css/table.css" th:href="@{/css/table.css}"
+	rel="stylesheet" media="screen" />
+	<link href="../static/css/stile-custom.css" th:href="@{/css/stile-custom.css}"
 	rel="stylesheet" media="screen" type="text/css"/>
-
 </head>
 
 <body class="home">
@@ -25,31 +26,33 @@
 				id="navigation">
 				<div class="logo">
 					<a href="/"><img
-						src="/img/profile.png" alt="logo" class="hidden-xs hidden-sm"></img>
+						src="/img/profile.png" alt="logo" class="hidden-xs hidden-sm"></img> 
 					</a>
 				</div>
 				<div class="navi">
 					<ul>
-						<li class="active"><a href="/admin"><i class="fa fa-home"
+						<li><a href="/admin"><i class="fa fa-home"
 								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Home</span></a></li>
-						<li><a th:href="@{/admin/opere}"><i class="fa fa-file-image-o"
-								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Opere</span></a></li>
+						<li><a th:href="@{/admin/opere}"><i
+								class="fa fa-file-image-o" aria-hidden="true"></i><span
+								class="hidden-xs hidden-sm">Opere</span></a></li>
 						<li><a th:href="@{/admin/stanze}"><i class="fa fa-map-o"
 								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Stanze</span></a></li>
-						<li><a th:href="@{/admin/autori}"><i
+						<li ><a th:href="@{/admin/autori}"><i
 								class="fa fa-user" aria-hidden="true"></i><span
 								class="hidden-xs hidden-sm">Autori</span></a></li>
-						<li><a th:href="@{/admin/admin}"><i class="fa fa-plus-circle" aria-hidden="true"></i><span
-								class="hidden-xs hidden-sm">Aggiungi Admin</span></a></li>
+						<li class="active"><a th:href="@{/admin/admin}"><i class="fa fa-plus-circle"
+								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Aggiungi
+									Admin</span></a></li>
+						<li><div class="bottom"></div></li>
 					</ul>
 				</div>
 			</div>
-			<div class="col-md-10 col-sm-11 display-table-cell v-align">
-				<!--<button type="button" class="slide-toggle">Slide Toggle</button> -->
+			<div class="col-md-10 display-table-cell v-align">
 				<div class="row">
 					<header>
 						<div class="col-md-7">
-							<div class="titolo">Galleria D'Arte - Pagina Admin</div>
+							<div class="titolo">Pagina Admin - Gestisci Admin</div>
 						</div>
 						<div class="col-md-5">
 							<div class="header-rightside">
@@ -59,7 +62,7 @@
 									<li>Email</li>
 									<li>
 										<form th:action="@{/logout}" method="post">
-											<input class="btn btn-primary" type="submit" value="Sign Out" />
+											<input class="btn btn-primary" type="submit" value="Log Out" />
 										</form>
 									</li>
 								</ul>
@@ -67,13 +70,46 @@
 						</div>
 					</header>
 				</div>
-				<div class="user-dashboard">
-					<h1>Bentornato, NomeAdmin<!-- <span th:text="${admin.username}"></span> --></h1>
+				<div class="row col-md-10 col-md-offset-2 user-dashboard">
+				<div style="text-align:center">
+				
+				<form th:action="@{/admin/admin/inserisci}" method="get">
+				<input type="submit" class="btn btn-primary" value="Inserisci Nuovo Admin"></input>
+				</form>
+				
+				</div>
+					<table class="table table-striped custab">
+						<tr>
+							<th>Username</th>
+							<th>Nome</th>
+							<th>Cognome</th>
+							<th>E-mail</th>
+						
+							<th class="text-center">Azione</th>
+						</tr>
+						<th:foreach th:each="admin: ${admins}">		
+						<tr>
+							<td><span th:text="${admin.username}"></span></td>
+							<td><span th:text="${admin.nome}"></span></td>
+							<td><span th:text="${admin.cognome}"></span></td>
+							<td><span th:text="${admin.email}"></span></td>
+							<!--  
+							<td class="text-center">
+							<a class='btn btn-info btn-xs' th:href="@{autore/modifica?(id=${autore.id})}">
+							<span class="glyphicon glyphicon-edit"></span>Modifica</a> 
+							<a th:href="@{autore/elimina?(id=${autore.id})}" class="btn btn-danger btn-xs">
+							<span class="glyphicon glyphicon-remove"></span> Elimina</a>
+							</td>
+							-->
+						</tr>
+						</th:foreach>
+					</table>
 				</div>
 			</div>
 		</div>
+</div>
 
-	</div>
+
 	<script th:inline="javascript">
 		$(document).ready(function() {
 			$('[data-toggle="offcanvas"]').click(function() {
