--- a/galleria/src/main/resources/templates/admins/datiAdmin.html
+++ b/galleria/src/main/resources/templates/admins/datiAdmin.html
@@ -3,7 +3,8 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-<title>Admin</title>
+<meta charset="utf-8" />
+<title>Admin - Dati Autore</title>
 <link href="../static/vendor/bootstrap/css/bootstrap.min.css"
 	th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet"
 	media="screen" type="text/css" />
@@ -12,9 +13,10 @@
 	rel="stylesheet" media="screen" type="text/css" />
 <link href="../static/css/admin.css" th:href="@{/css/admin.css}"
 	rel="stylesheet" media="screen" type="text/css" />
-<link href="../static/css/stile-custom.css" th:href="@{/css/stile-custom.css}"
+<link href="../static/css/table.css" th:href="@{/css/table.css}"
+	rel="stylesheet" media="screen" />
+	<link href="../static/css/stile-custom.css" th:href="@{/css/stile-custom.css}"
 	rel="stylesheet" media="screen" type="text/css"/>
-
 </head>
 
 <body class="home">
@@ -24,32 +26,33 @@
 				class="col-md-2 col-sm-1 hidden-xs display-table-cell v-align box"
 				id="navigation">
 				<div class="logo">
-					<a href="/"><img
-						src="/img/profile.png" alt="logo" class="hidden-xs hidden-sm"></img>
-					</a>
+					<a href="/"><img src="/img/profile.png" alt="logo"
+						class="hidden-xs hidden-sm"></img> </a>
 				</div>
 				<div class="navi">
 					<ul>
-						<li class="active"><a href="/admin"><i class="fa fa-home"
+						<li><a href="/admin"><i class="fa fa-home"
 								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Home</span></a></li>
-						<li><a th:href="@{/admin/opere}"><i class="fa fa-file-image-o"
-								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Opere</span></a></li>
+						<li><a th:href="@{/admin/opere}"><i
+								class="fa fa-file-image-o" aria-hidden="true"></i><span
+								class="hidden-xs hidden-sm">Opere</span></a></li>
 						<li><a th:href="@{/admin/stanze}"><i class="fa fa-map-o"
 								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Stanze</span></a></li>
 						<li><a th:href="@{/admin/autori}"><i
 								class="fa fa-user" aria-hidden="true"></i><span
 								class="hidden-xs hidden-sm">Autori</span></a></li>
-						<li><a th:href="@{/admin/admin}"><i class="fa fa-plus-circle" aria-hidden="true"></i><span
-								class="hidden-xs hidden-sm">Aggiungi Admin</span></a></li>
+						<li class="active"><a th:href="@{/admin/admin}"><i class="fa fa-plus-circle"
+								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Aggiungi
+									Admin</span></a></li>
+						<li><div class="bottom"></div></li>
 					</ul>
 				</div>
 			</div>
-			<div class="col-md-10 col-sm-11 display-table-cell v-align">
-				<!--<button type="button" class="slide-toggle">Slide Toggle</button> -->
+			<div class="col-md-10 display-table-cell v-align">
 				<div class="row">
 					<header>
 						<div class="col-md-7">
-							<div class="titolo">Galleria D'Arte - Pagina Admin</div>
+							<div class="titolo">Pagina Admin - Dati Admin</div>
 						</div>
 						<div class="col-md-5">
 							<div class="header-rightside">
@@ -59,7 +62,7 @@
 									<li>Email</li>
 									<li>
 										<form th:action="@{/logout}" method="post">
-											<input class="btn btn-primary" type="submit" value="Sign Out" />
+											<input class="btn btn-primary" type="submit" value="Log Out" />
 										</form>
 									</li>
 								</ul>
@@ -67,13 +70,33 @@
 						</div>
 					</header>
 				</div>
-				<div class="user-dashboard">
-					<h1>Bentornato, NomeAdmin<!-- <span th:text="${admin.username}"></span> --></h1>
+				<div class="row col-md-10 col-md-offset-2 user-dashboard">
+					Operazione eseguita con successo, hai inserito:
+					<div>
+						<p th:text="'Username: ' + ${admin.username}" />
+					</div>
+					<div>
+						<p th:text="'Password: ' + ${admin.password}" />
+					</div>
+					<div>
+						<p th:text="'Nome: ' + ${admin.nome}" />
+					</div>
+					<div>
+						<p th:text="'Cognome: ' + ${admin.cognome}" />
+					</div>
+					<div>
+						<p th:text="'E-mail: ' + ${admin.email}" />
+					</div>
+					<form th:action="@{/admin/admin}" method="get">
+						<input type="submit" class="btn btn-primary"
+							value="Torna alla pagine degli admin"></input>
+					</form>
 				</div>
 			</div>
 		</div>
-
 	</div>
+
+
 	<script th:inline="javascript">
 		$(document).ready(function() {
 			$('[data-toggle="offcanvas"]').click(function() {
