Creata home dinamica che carica le prime 6 opere, rifinito admin e completato

--- a/galleria/src/main/resources/static/css/stile-custom.css
+++ b/galleria/src/main/resources/static/css/stile-custom.css
@@ -58,3 +58,27 @@
 	margin:0px;
 	padding:0px;
 }
+
+.mostraDati{
+	margin: auto;
+	font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 14pt;
+	text-align: center;
+}
+
+.mostraDati p { display: inline }
+
+.dati{
+	color: #204a87;
+	font-style: italic;
+}
+
+.portfolio-item img{
+	display: block;
+	max-width: 300px;
+	max-height: 400px;
+	width: auto;
+	height: auto;
+	margin: auto;
+	
+}
