--- a/galleria/src/main/resources/static/css/table.css
+++ b/galleria/src/main/resources/static/css/table.css
@@ -10,3 +10,12 @@
     box-shadow: 3px 3px 0px transparent;
     transition: 0.5s;
     }
+.custab th{
+	color: white;
+	background: #3465a4; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(down,#002699, #6666ff); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(down,#002699, #6666ff); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(down,#002699, #6666ff); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(down,#002699, #6666ff); /* Standard syntax */
+
+   }
