--- a/galleria/src/main/resources/templates/admin.html
+++ b/galleria/src/main/resources/templates/admin.html
@@ -39,7 +39,7 @@
 						<li><a th:href="@{/admin/autori}"><i
 								class="fa fa-user" aria-hidden="true"></i><span
 								class="hidden-xs hidden-sm">Autori</span></a></li>
-						<li><a th:href="@{/admin/admin}"><i class="fa fa-plus-circle" aria-hidden="true"></i><span
+						<li><a th:href="@{/admin/admins}"><i class="fa fa-plus-circle" aria-hidden="true"></i><span
 								class="hidden-xs hidden-sm">Aggiungi Admin</span></a></li>
 					</ul>
 				</div>
