--- a/galleria/src/main/resources/templates/admin/autori.html
+++ b/galleria/src/main/resources/templates/admin/autori.html
@@ -41,7 +41,7 @@
 						<li class="active"><a th:href="@{/admin/autori}"><i
 								class="fa fa-user" aria-hidden="true"></i><span
 								class="hidden-xs hidden-sm">Autori</span></a></li>
-						<li><a th:href="@{/admin/admin}"><i class="fa fa-plus-circle"
+						<li><a th:href="@{/admin/admins}"><i class="fa fa-plus-circle"
 								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Aggiungi
 									Admin</span></a></li>
 						<li><div class="bottom"></div></li>
