--- a/galleria/src/main/resources/templates/stanza/datiStanza.html
+++ b/galleria/src/main/resources/templates/stanza/datiStanza.html
@@ -41,7 +41,7 @@
 						<li><a th:href="@{/admin/autori}"><i
 								class="fa fa-user" aria-hidden="true"></i><span
 								class="hidden-xs hidden-sm">Autori</span></a></li>
-						<li><a href="#"><i class="fa fa-plus-circle"
+						<li><a th:href="@{/admin/admins}"><i class="fa fa-plus-circle"
 								aria-hidden="true"></i><span class="hidden-xs hidden-sm">Aggiungi
 									Admin</span></a></li>
 						<li><div class="bottom"></div></li>
@@ -52,7 +52,7 @@
 				<div class="row">
 					<header>
 						<div class="col-md-7">
-							<div class="titolo">Pagina Admin - Dati Autore</div>
+							<div class="titolo">Pagina Admin - Dati Stanza</div>
 						</div>
 						<div class="col-md-5">
 							<div class="header-rightside">
@@ -71,18 +71,24 @@
 					</header>
 				</div>
 				<div class="row col-md-10 col-md-offset-2 user-dashboard">
-					Operazione eseguita con successo, hai inserito:
+					<div class="mostraDati">
+					<div class="dati">Operazione eseguita con successo, hai inserito:</div>
 					<div>
-						<p th:text="'Nome: ' + ${stanza.nome}" />
+						<b>Nome: </b><p class="dati" th:text="${stanza.nome}" />
 					</div>
 					<div>
-						<p th:text="'Cognome: ' + ${stanza.descrizione}" />
-					</div>
+						<b>Descrizione: </b><p class="dati" th:text="${stanza.descrizione}" />
+					</div><br></br>
 					
 					<form th:action="@{/admin/stanze}" method="get">
 						<input type="submit" class="btn btn-primary"
-							value="Torna alla pagine degli autori"></input>
+							value="Torna alla pagine delle stanze"></input>
+					</form><br></br>
+					<form th:action="@{/admin/stanza/inserisci}" method="get">
+						<input type="submit" class="btn btn-primary"
+							value="Inserisci Ancora"></input>
 					</form>
+					</div>
 				</div>
 			</div>
 		</div>
