--- a/galleria/src/main/resources/static/css/stile-custom.css
+++ b/galleria/src/main/resources/static/css/stile-custom.css
@@ -22,8 +22,8 @@
 
 .modal-body>img {
 	display: block;
-	max-width: 300px;
-	max-height: 400px;
+	max-width: 400px;
+	max-height: 500px;
 	width: auto;
 	height: auto;
 	margin: auto;
@@ -73,12 +73,60 @@
 	font-style: italic;
 }
 
+.portfolio-item{
+	width:33%;
+	height: 150px;
+	padding: 10px;
+	background-color: #e8e8e8;
+}
 .portfolio-item img{
 	display: block;
-	max-width: 300px;
-	max-height: 400px;
+	width: 100%;
+	max-height: 120px;
 	width: auto;
 	height: auto;
 	margin: auto;
-	
+	border: 1px solid #204a87;
 }
+
+
+
+#custom-search-input {
+        margin:0;
+        margin-top: 10px;
+        padding: 0;
+    }
+ 
+    #custom-search-input .search-query {
+        padding-right: 3px;
+        padding-right: 4px \9;
+        padding-left: 3px;
+        padding-left: 4px \9;
+        /* IE7-8 doesn't have border-radius, so don't indent the padding */
+ 
+        margin-bottom: 0;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+    }
+ 
+    #custom-search-input button {
+        border: 0;
+        background: none;
+        /** belows styles are working good */
+        padding: 2px 5px;
+        margin-top: 2px;
+        position: relative;
+        left: -28px;
+        /* IE7-8 doesn't have border-radius, so don't indent the padding */
+        margin-bottom: 0;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        color:#D9230F;
+    }
+ 
+    .search-query:focus + button {
+        z-index: 3;   
+    }
+
